--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"vite\"",
-    "server": "node src/server.js",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,8 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "framer-motion": "^11.0.8",
-    "zustand": "^4.4.7",
-    "express": "^4.18.2"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -26,7 +24,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
-    "concurrently": "^8.2.2"
+    "vite": "^5.4.2"
   }
 }
